--- a/Sources/Properties/Resources.resx
+++ b/Sources/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="Show_Actual" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Show Actual.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Show_All" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Show All.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Show_Changed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Show Changed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
