--- a/Sources/Properties/Resources.resx
+++ b/Sources/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="Library_Delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Library Delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Library_Duplicate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Library Duplicate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Library_Move_Down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Library Move Down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
